--- a/profile-card-component-challenge/src/style.css
+++ b/profile-card-component-challenge/src/style.css
@@ -19,8 +19,8 @@ body{
   align-items: center;
   justify-content: center;
   display: grid;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
   background: radial-gradient(circle at 14%, var(--left), transparent 30%),
@@ -115,7 +115,7 @@ button{
 @media (max-width:700px) {
   main{
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     align-items: center;
     justify-content: center;
